# luxical

./: .gitattributes  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
arrow_tokenize/: .gitignore  Cargo.toml  README.md  arrow_tokenize.pyi  pyproject.toml
arrow_tokenize/src/: lib.rs
projects/huggingface_integration/: README.md  luxical_hf_wrapper.py
projects/luxical_one/: README.md  eval_on_fineweb_edu.ipynb  step_1_teacher_embed_training_docs.py  step_2_summarize_ngrams_in_training_docs.py  step_3_train_luxical_one.py
projects/miscellaneous/: sparse_matmul_benchmarking.py
src/luxical/: __about__.py  csr_matrix_utils.py  dataset_abstractions.py  embedder.py  misc_utils.py  ngrams.py  sparse_to_dense_neural_nets.py  teacher_embedder.py  tokenization.py  training.py
tests/: test_embedder.py  test_minimal_csr_roundtrip.py  test_misc_utils.py  test_ngrams.py  test_training.py
