[package]
name = "arrow_tokenize"
version = "1.0.0"
edition = "2021"

[lib]
name = "arrow_tokenize"
crate-type = ["cdylib"]

[dependencies]
tokenizers = { version = "0.21.1", features = ["http"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
arrow = { version = "55.1.0", features = ["pyarrow"] }
arrow-array = { version = "55.1.0" }
arrow-data = { version = "55.1.0" }
rayon = "1.10.0"
